--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,19 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  
+      <style>
+      body {
+        font-size: 20px;
+        padding: 80px 50px;
+        background-color: #fcf8e3;
+      }
+      
+      h2 {
+        letter-spacing: 0.15em;
+        color: #000;
+      }
+    </style>
 </head>
 <body>
   <nav class="navbar">
