--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,22 +1,32 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h1>メッセージ一覧</h1>
+        <h2>メッセージ一覧</h2>
     </div>
     
     <div class="panel-body">
         <% @messages.each do |message| %>
-            <span class="label label-info"><%= message.name %></span>
+            <span class="label label-warning"><%= message.name %></span>
             <%= message.body %>
             <br>
         <% end %>
     </div>
 </div>
+<hr>
 
-<%= form_for(@message) do |f| %>
-    名前:
-    <%= f.text_field :name %>
-
-    内容:
-    <%= f.text_field :body %>
-    <%= f.submit class: "btn btn-sm btn-warning" %>
-<% end %>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h2>投稿フォーム</h2>
+    </div>
+    
+    <div class="panel-body">
+        <%= form_for(@message) do |f| %>
+        名前<br>
+        <%= f.text_field :name %>
+        <br><br>
+        内容<br>
+        <%= f.text_area :body %>
+        <br><br>
+        <input class="btn btn-sm btn-warning" type="submit" name="commit" value="送信" />
+    </div>
+</div>
+        <% end %>
