--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,7 +11,7 @@
         <% end %>
     </div>
 </div>
-<hr>
+<br>
 
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -20,10 +20,22 @@
     
     <div class="panel-body">
         <%= form_for(@message) do |f| %>
-        名前<br>
+        
+        <% if @message.errors.present? %>
+        <div class="alert alert-danger">
+            <%= alert %>
+            <ul>
+                <% @message.errors.full_messages.each do |full_message| %>
+                <li><%= full_message %></li>
+                <% end %>                
+            </ul>
+        </div>
+        <% end %>
+        
+        名前（必須　20文字以内）<br>
         <%= f.text_field :name %>
         <br><br>
-        内容<br>
+        内容（必須　2~30文字）<br>
         <%= f.text_area :body %>
         <br><br>
         <input class="btn btn-sm btn-warning" type="submit" name="commit" value="送信" />
