--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -18,14 +18,28 @@
         <h2>投稿フォーム</h2>
     </div>
     <div class="panel-body">
-        <%= form_for(@message) do |f| %>
-        名前<br>
-        <%= f.text_field :name %>
-        <br><br>
-        内容<br>
-        <%= f.text_area :body %>
-        <br><br>
-        <input class="btn btn-sm btn-warning" type="submit" name="commit" value="送信" />
+        <%= form_for(@message, html: {class: 'form-horizontal'}) do |f| %>
+            <div class="form-group">
+                <label for="message_name" class="col-sm-2 control-label">名前</label>
+                <div class= "col-sm-8">
+                    <%= f.text_field :name, class: 'form-control' %>
+                </div>
+                <div class= "col-sm-2"></div>
+            </div>
+            
+            <div class="form-group">
+                <label for="message_body" class="col-sm-2 control-label">内容</label>
+                <div class= "col-sm-8">
+                    <%= f.text_area :body, class: 'form-control' %>
+                </div>
+                <div class= "col-sm-2"></div>
+            </div>
+            
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <%= f.submit '送信', class: "btn btn-warning" %>  
+                </div>
+            </div>
+        <% end %>
     </div>
 </div>
-        <% end %>
