--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
       <style>
       body {
         font-size: 20px;
-        padding: 80px 50px;
+        padding: 0px 80px 50px 80px;
         background-color: #fcf8e3;
       }
       
