--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,40 +1,45 @@
-<%= form_for(@message) do |f| %>
-
-  
-<% if @message.errors.present? %>
-
-    <div class="alert alert-danger">
-      
-<%= alert %>
-
-      <ul>
-        
-<% @message.errors.full_messages.each do |full_message| %>
-
-          <li>
-            
-<%= full_message %>
-
-          </li>
-        
-<% end %>
- 
-      </ul>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h2>投稿フォーム</h2>
     </div>
-  
-<% end %>
+    <div class="panel-body">
+      <%= form_for(@message, html: {class: 'form-horizontal'}) do |f| %>
+        
+      <% if @message.errors.present? %>
+        <div class="alert alert-danger">
+            <%= alert %>
+            <ul>
+                <% @message.errors.full_messages.each do |full_message| %>
+                <li><%= full_message %></li>
+                <% end %>                
+            </ul>
+        </div>
+      <% end %>
+        
+        
 
 
-  名前:
-  
-<%= f.text_field :name %>
-
-
-  内容:
-  
-<%= f.text_field :body %>
-
-  
-<%= f.submit class: "btn btn-sm btn-primary" %>
-
-<% end %>
+            <div class="form-group">
+                <label for="message_name" class="col-sm-2 control-label">名前</label>
+                <div class= "col-sm-8">
+                    <%= f.text_field :name, class: 'form-control' %>
+                </div>
+                <div class= "col-sm-2"></div>
+            </div>
+            
+            <div class="form-group">
+                <label for="message_body" class="col-sm-2 control-label">内容</label>
+                <div class= "col-sm-8">
+                    <%= f.text_area :body, class: 'form-control' %>
+                </div>
+                <div class= "col-sm-2"></div>
+            </div>
+            
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <%= f.submit '送信', class: "btn btn-warning" %>  
+                </div>
+            </div>
+    <% end %>
+  </div>
+</div>
