--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,9 +7,9 @@
         <% @messages.each do |message| %>
             <span class="label label-warning"><%= message.name %></span>
             <%= message.body %>
-            (<%= link_to "edit" , edit_message_path(message) %>
-            <%= link_to "destroy" , message , method: :delete, data: { confirm: '削除してもよろしいですか？' } %>
-            )
+            ｜<%= link_to "編集" , edit_message_path(message) %>
+            <%= link_to "削除" , message , method: :delete, data: { confirm: '削除してもよろしいですか？' } %>
+            
             <br>
         <% end %>
     </div>
