--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -22,6 +22,13 @@
                 <div class= "col-sm-2"></div>
             </div>
             
+            <div class="form-group">
+                <label for="message_age" class="col-sm-2 control-label">年齢</label>
+                <div class= "col-sm-8">
+                    <%= f.text_field :age, class: 'form-control' %>
+                </div>
+                <div class= "col-sm-2"></div>
+            </div>
             
             
             <div class="form-group">
