--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
   <div class="container">
     
     <% if notice %>
-      <div class="alert alert-danger">
+      <div class="alert alert-success">
         <%= notice %>
       </div>
     <% end %>
